reordered some stuff in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,12 @@ include_directories("C:/Program Files/JACK2/include")
 # Add the path to the directory containing the .lib files
 link_directories("C:/Program Files/JACK2/lib")
 
-add_executable(SvE-Distortion source/main.cpp source/distortion.cpp source/distortion.hpp source/jack_module.cpp source/jack_module.h source/oscillator.cpp source/oscillator.hpp)
+add_executable(SvE-Distortion
+        source/main.cpp
+        source/jack_module.cpp source/jack_module.h
+        source/oscillator.cpp source/oscillator.hpp
+        source/distortion.cpp source/distortion.hpp
+)
 
 # Link against the Jack2 library
 target_link_libraries(SvE-Distortion PRIVATE "C:/Program Files/JACK2/lib/libjack64.lib")
